--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "description": "SERVER_TEMPLATE",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "build": ""
+  },
   "dependencies": {
     "express": "^4.19.2",
     "ws": "^8.17.0"
